<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llBluetoothName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text = "@string/str_bluetooth_name"/>
        <EditText
            android:id="@+id/edBluetoothName"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:ems="5"
            android:text="@string/str_berry_med"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_below="@id/llBluetoothName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBluetoothToggle"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/turn_on_bluetooth"/>

        <Button
            android:id="@+id/btnSearchOximeters"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:enabled="false"
            android:text="@string/search_oximeters"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvStatusBar"
        android:padding="10dp"
        android:text="____"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBtns"/>

    <LinearLayout
        android:id="@+id/rlInfoBtns"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStatusBar"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBluetoothVersion"
            android:onClick="onClick"
            android:text="@string/str_bluetooth_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnNotify"
            android:onClick="onClick"
            android:text="@string/str_notify"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBluetoothVersion"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

    <SurfaceView
        android:id="@+id/sfvSpO2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:background="@color/app_background_color"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/tvParamsBar"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sfvSpO2"/>

</RelativeLayout>
